--- a/Suit.html
+++ b/Suit.html
@@ -3,37 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Suid-Bot</title>
+    <title>Suit-bot</title>
     <link rel="stylesheet" href="css/suit.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Belanosima:wght@600&family=Cantora+One&family=Kavoon&display=swap"/>
-      <link rel="stylesheet" href="css/suit.css">
+    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@600&family=Cantora+One&family=Kavoon&display=swap"
+    />
+    <link rel="stylesheet" href="css/suit.c" />
   </head>
   <body>
     <nav class="navbar">
       <a href="#" class="logo">Exicobt.</a>
     </nav>
     <section class="section">
-      <main class="">
-        <div id="skorPlayer">0</div>
+      <main class="main">
+        <div class="score">
+          <div id="skorPlayer">0</div>
+          <div id="skorBot">0</div>
+        </div>
+
+        <div class="player-bot">
+          <div class="you">Kamu:</div>
+          <div class="bot">bot:</div>
+        </div>
 
         <div class="game">
           <div class="left">
-            <div class="you">Kamu:</div>
             <div class="pilihan" id="batu" data-pilihan="batu">✊</div>
             <div class="pilihan" id="gunting" data-pilihan="gunting">✌</div>
             <div class="pilihan" id="kertas" data-pilihan="kertas">✋</div>
           </div>
 
-          <div class="vs">
-            <h1>V<span>S.</span></h1>
-            <div id="result"></div>
+          <div class="center">
+            <div class="vs">
+              <div id="result"></div>
+              <h1>V<span>S.</span></h1>
+              
+              <div id="pilPlay"></div>
+            </div>
           </div>
 
           <div class="right">
-            <div class="bot">bot:</div>
             <div class="pilihanBot"></div>
           </div>
         </div>
